[package]
name = "esp32_lora_test"
version = "0.1.0"
authors = ["Priit Laes <plaes@plaes.org>"]
edition = "2021"
license = "MIT"

[dependencies]
defmt = "0.3"

embedded-graphics = "0.8"
embedded-hal = "1"
embedded-hal-async = "1"
embedded-hal-bus = { version = "0.2.0", features = ["async"] }

esp-backtrace = { version = "0.13", features = ["esp32", "defmt", "panic-handler", "exception-handler"] }
esp-hal = { version = "0.20.1", features=["default", "esp32", "defmt", "async", "embedded-hal"] }
esp-hal-embassy = { version = "0.3.0", features = ["esp32", "defmt", "integrated-timers", "executors"] }
esp-println = { version = "0.9.1", features = ["defmt-espflash", "esp32"] }

static_cell = "2.1.0"

embassy-executor = "0.6.0"
embassy-sync = "0.6.0"
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime"]}

lora-phy = { path = "../lora-rs/lora-phy"}
hex-display = "0.3.0"
no_std_strings = "0.1.3"
ssd1306 = "0.9.0"

[patch.crates-io]
# SPI + DMA has been reworked since 0.19 release
# esp-hal = { path = "../esp-hal/esp-hal" }
#esp-hal = { git = "https://github.com/esp-rs/esp-hal", rev = "a41bc4cb3df08b254478cbe862420232e066b5e6" }
# No release compatible with 0.19.0
# esp-hal-embassy = { path = "../esp-hal/esp-hal-embassy" }
#esp-hal-embassy = { git = "https://github.com/esp-rs/esp-hal", rev = "a41bc4cb3df08b254478cbe862420232e066b5e6" }
#xtensa-lx-rt = { path = "../esp-hal/xtensa-lx-rt" }

[features]
default = []

[[bin]]
name = "transmit"
path = "src/p2p_transmit.rs"

[[bin]]
name = "receive"
path = "src/p2p_receive.rs"

[[bin]]
name = "spi_test"
path = "src/spi_test.rs"

[[bin]]
name = "spi_dma_transaction"
path = "src/spi_dma_transaction.rs"

[[bin]]
name = "gpio_regression"
path = "src/gpio_regression.rs"
