[package]
name = "esp32_lora_test"
version = "0.1.0"
authors = ["Priit Laes <plaes@plaes.org>"]
edition = "2021"
license = "MIT"

[dependencies]
defmt = "0.3"

embedded-graphics = "0.8"
embedded-hal = "1"
embedded-hal-async = "1"
embedded-hal-bus = { version = "0.2.0", features = ["async"] }

esp-hal = { version = "0.23.1", features=["default", "esp32", "defmt"] }
esp-hal-embassy = { version = "0.6.0", features = ["esp32", "defmt", "executors"] }
esp-backtrace = { version = "0.15", features = ["esp32", "defmt", "panic-handler", "exception-handler"] }
esp-println = { version = "0.13", features = ["defmt-espflash", "esp32"] }

embassy-executor = "0.7"
embassy-sync = "0.6.0"
embassy-time = { version = "0.4", features = ["defmt", "defmt-timestamp-uptime"]}

lora-phy = "3.0.1"
hex-display = "0.3"
no_std_strings = "0.1.3"
ssd1306 = "0.9.0"
static_cell = "2.1.0"

[patch.crates-io]
#esp-hal = { path = "../esp-hal/esp-hal" }
#esp-hal = { git = "https://github.com/esp-rs/esp-hal", rev = "2971c08ed4f627f4d6c0cc22807981444edabaa2" }
#esp-hal-embassy = { path = "../esp-hal/esp-hal-embassy" }
#esp-hal-embassy = { git = "https://github.com/esp-rs/esp-hal", rev = "2971c08ed4f627f4d6c0cc22807981444edabaa2" }
# lora-phy = { path = "../lora-rs/lora-phy"}

[features]
default = []

[[bin]]
name = "transmit"
path = "src/p2p_transmit.rs"

[[bin]]
name = "receive"
path = "src/p2p_receive.rs"

[[bin]]
name = "spi_test"
path = "src/spi_test.rs"

[[bin]]
name = "spi_dma_transaction"
path = "src/spi_dma_transaction.rs"

[[bin]]
name = "gpio_regression"
path = "src/gpio_regression.rs"
